Changed max pixel media query to prevent footer from jumping to two lines on some mobile devices

--- a/static/spacescout_admin/css/main.less
+++ b/static/spacescout_admin/css/main.less
@@ -601,7 +601,7 @@ a.action-link { text-decoration: none; }
 .space-footer { background: @gray-lighter; line-height: 60px; font-size: 85%; }
 .space-footer-copyright:after { 
     
-    @media screen and (max-width: 320px) { 
+    @media screen and (max-width: 380px) { 
         content: " ACA, UW-IT"; 
     }
     content: " Academic & Collaborative Applications, UW-IT"; 
